# app-libri-fede-web-client

./: Cargo.toml  README.md  index.html  style.css
src/: api.rs  controllers.rs  main.rs  models.rs  state.rs
src/components/: book_item.rs  book_list.rs  mod.rs
