[package]
name = "web_client"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-storage = "0.3.0"
gloo-utils = "0.2.0"
reqwasm = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Window", "Element", "MediaQueryList", "DomTokenList"] }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
